Sólo rellenar y dejarlo BIEN

--- a/Sobre el proyecto/Sobre_el_proyecto.html
+++ b/Sobre el proyecto/Sobre_el_proyecto.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Currículum</title>
+    <title>Sobre el proyecto</title>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rock+Salt&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CV.css">
+    <link rel="stylesheet" href="Sobre_el_proyecto.css">
 </head>
 
 <body>
@@ -18,10 +18,6 @@
         <div class="container">
             <h1>Stefan Alecsa</h1>
             <p>Futuro Administrador de sistemas</p>
-        </div>
-        <div class="contacto">
-                <p>Teléfono: 643411976</p>
-                <p>Correo: alecsastefan16@gmail.com</p>
         </div>
     </header>
 
