--- a/index.html
+++ b/index.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Formulario</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rock+Salt&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rock+Salt&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-</head>
-
-<body>
-
+  <body>
     <header>
-        <div class="logo">
-            <a href="../index.html"><img src="klipartz.com.png" alt="Logo"></a>
-        </div>
-        <div class="container">
-            <h1>Stefan Alecsa</h1>
-            <p>Futuro Administrador de sistemas</p>
-        </div>
+      <div class="logo">
+        <a href="../index.html"><img src="klipartz.com.png" alt="Logo" /></a>
+      </div>
+      <div class="container">
+        <h1>Stefan Alecsa</h1>
+      </div>
     </header>
 
-    <nav>
-        <a href="#Sobre_Mí">Sobre Mí</a>
-        <a href="#experiencia">Experiencia Laboral</a>
-        <a href="#educacion">Educación</a>
-        <a href="#habilidades">Habilidades</a>
-    </nav>
-
-
-    <div class="container main">
-
-    </div>
+    <div class="container main"></div>
     <center>
-    <footer>
+      <footer>
         <p class="footer">Autor: Stefan Vlad Alecsa</p>
         <p class="footer">Correo: stefan.alecsa@educa.madrid.org</p>
         <p class="footer">Última modificación: 07 de noviembre del 2023</p>
-    </footer>
-</center>
-<nav class="Menú">
-    <ul>
-    <li class="lista"><a href="../index.html">Index</a></li>
-    <li class="lista"><a href="../Sobre el proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a></li>
-    <li class="lista"><a href="../Formulario/Formulario.html">Formulario</a></li>
-</ul>
-</nav>
-</body>
-
+      </footer>
+    </center>
+    <nav class="Menú">
+      <ul>
+        <li class="lista"><a href="../index.html">Index</a></li>
+        <li class="lista">
+          <a href="../Sobre el proyecto/Sobre_el_proyecto.html"
+            >Sobre el proyecto</a
+          >
+        </li>
+        <li class="lista">
+          <a href="../Formulario/Formulario.html">Formulario</a>
+        </li>
+      </ul>
+    </nav>
+  </body>
 </html>
