--- a/Formulario/Formulario.html
+++ b/Formulario/Formulario.html
@@ -32,13 +32,8 @@
     <nav class="Menú">
       <ul>
         <li class="lista"><a href="../index.html">Index</a></li>
-        <li class="lista">
-          <a href="../Sobre el proyecto/Sobre_el_proyecto.html"
-            >Sobre el proyecto</a
-          >
-        </li>
-        <li class="lista">
-          <a href="../Formulario/Formulario.html">Formulario</a>
+        <li class="lista"><a href="../Sobre el proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a></li>
+        <li class="lista"><a href="../Formulario/Formulario.html">Currículum Vitae</a>
         </li>
       </ul>
     </nav>
