--- a/Sobre el proyecto/Sobre_el_proyecto.html
+++ b/Sobre el proyecto/Sobre_el_proyecto.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulario</title>
+    <title>Sobre el proyecto</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rock+Salt&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Sobre_el_proyecto.css">
+    <link rel="stylesheet" href="Sobre_el_proyecto.css" />
   </head>
 
   <body>
@@ -32,14 +32,8 @@
     <nav class="Menú">
       <ul>
         <li class="lista"><a href="../index.html">Index</a></li>
-        <li class="lista">
-          <a href="../Sobre el proyecto/Sobre_el_proyecto.html"
-            >Sobre el proyecto</a
-          >
-        </li>
-        <li class="lista">
-          <a href="../Formulario/Formulario.html">Formulario</a>
-        </li>
+        <li class="lista"><a href="../CV/CV.html">Currículum Vitae</a></li>
+        <li class="lista"><a href="../Formulario/Formulario.html">Formulario</a></li>
       </ul>
     </nav>
   </body>
