--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulario</title>
+    <title>Index</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rock+Salt&display=swap"
       rel="stylesheet"
@@ -31,14 +31,9 @@
     </center>
     <nav class="Menú">
       <ul>
-        <li class="lista"><a href="../index.html">Index</a></li>
-        <li class="lista">
-          <a href="../Sobre el proyecto/Sobre_el_proyecto.html"
-            >Sobre el proyecto</a
-          >
-        </li>
-        <li class="lista">
-          <a href="../Formulario/Formulario.html">Formulario</a>
+        <li class="lista"><a href="../1EVAL_HTMLyCSS_APPWEB_2smrb_StefanAlecsa/CV/CV.html">Currículum Vitae</a></li>
+        <li class="lista"><a href="../Sobre el proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a></li>
+        <li class="lista"><a href="../Formulario/Formulario.html">Formulario</a>
         </li>
       </ul>
     </nav>
