margin-left: 10px;

--- a/Formulario/Formulario.html
+++ b/Formulario/Formulario.html
@@ -28,7 +28,7 @@
         <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre"/>
       
         <label for="apellidos">Apellidos</label>
-        <input type="text" name="apellidos" id="apellidos" placeholder="1r Apellido"/>
+        <input type="text" name="apellidos" id="apellidos" placeholder="Apellido"/>
 
         <label for="fecha de nacimiento">Fecha de nacimiento</label>
         <input type="date" name="fecha">
@@ -60,7 +60,7 @@
         <label for="contraseña">Contraseña</label>
         <input type="password" name="contraseña" placeholder="Contraseña" minlength="6" maxlength="10" required>
       
-        <label for="nivel de inglés">Indique su nivel de inglés</label>
+        <label for="nivel de inglés">Indique su nivel de inglés (A1,A2,B1,B2,C1,C2)</label>
         <input type="range" name="rango" min="0" max="6" list="lista-rango">
         <datalist id="lista-rango">
           <option value="A1">
@@ -100,7 +100,7 @@
       <ul>
         <li class="lista"><a href="../index.html">Index</a></li>
         <li class="lista"><a href="../Sobre el proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a></li>
-        <li class="lista"><a href="../Formulario/Formulario.html">Currículum Vitae</a>
+        <li class="lista"><a href="../CV/CV.html">Currículum Vitae</a>
         </li>
       </ul>
     </nav>
