margin-left: 10px;dcv

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </center>
     <nav class="Menú">
       <ul>
-        <li class="lista"><a href="../1EVAL_HTMLyCSS_APPWEB_2smrb_StefanAlecsa/CV/CV.html">Currículum Vitae</a></li>
+        <li class="lista"><a href="../CV/CV.html">Currículum Vitae</a></li>
         <li class="lista"><a href="../Sobre el proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a></li>
         <li class="lista"><a href="../Formulario/Formulario.html">Formulario</a>
         </li>
