--- a/CV/CV.html
+++ b/CV/CV.html
@@ -108,7 +108,7 @@
         <tr>
           <th>
             <div class="section Habilidades" id="habilidades">
-              <h2>Habilidades</h2>
+              <h3 class="diferente">Habilidades</h3>
               <div class="Habilidad">DNS</div>
               <div class="Habilidad">HTTP</div>
               <div class="Habilidad">SSH</div>
