--- a/Formulario/Formulario.html
+++ b/Formulario/Formulario.html
@@ -93,7 +93,7 @@
   <nav class="Menú">
     <ul>
       <li class="lista"><a href="../index.html">Index</a></li>
-      <li class="lista"><a href="../Sobre el proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a></li>
+      <li class="lista"><a href="../Sobre_el_proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a></li>
       <li class="lista"><a href="../CV/CV.html">Currículum Vitae</a>
       </li>
     </ul>
