--- a/CV/CV.html
+++ b/CV/CV.html
@@ -2,18 +2,17 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Currículum</title>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rock+Salt&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" href="CV.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rock+Salt&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CV.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img src="klipartz.com.png" alt="Logo" /></a>
+            <a href="../index.html"><img src="klipartz.com.png" alt="Logo"></a>
         </div>
         <div class="container">
             <h1>Stefan Alecsa</h1>
@@ -50,10 +49,7 @@
 
             <tr>
                 <th>
-                    <div class="section experiencia" id="experiencia">
                         <h2 class="Con">Experiencia Laboral</h2>
-                        <div class="Trabajo"></div>
-
                         <div class="Trabajo">
                             <h3>Electricidad</h3>
                             <p><strong>Fecha:</strong> Julio 2017 - Hasta hoy día</p>
@@ -93,12 +89,10 @@
                         </div>
                         <div class="educacion">
                             <h3>
-                                Grado Medio en Sistemas Microinformáticos en Redes en IES
-                                Villablanca
+                                Grado Medio en Sistemas Microinformáticos en Redes en IES Villablanca
                             </h3>
                             <p>
-                                <strong>Fecha de Graducación:</strong> Sigo cursando dicho
-                                Grado medio.
+                                <strong>Fecha de Graducación:</strong> Sigo cursando dicho Grado medio.
                             </p>
                         </div>
                     </div>
@@ -130,11 +124,8 @@
     <nav class="Menú">
         <ul>
             <li class="lista"><a href="../index.html">Index</a></li>
-            <li class="lista">
-                <a href="../Sobre el proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a>
-            </li>
-            <li class="lista">
-                <a href="../Formulario/Formulario.html">Formulario</a>
+            <li class="lista"><a href="../Sobre_el_proyecto/Sobre_el_proyecto.html">Sobre el proyecto</a></li>
+            <li class="lista"><a href="../Formulario/Formulario.html">Formulario</a>
             </li>
         </ul>
     </nav>
