--- a/Sobre_el_proyecto/Sobre_el_proyecto.html
+++ b/Sobre_el_proyecto/Sobre_el_proyecto.html
@@ -18,7 +18,19 @@
       </div>
     </header>
 
-    <div class="container main"></div>
+    <div class="container main">
+      <div class="section">
+        <h2>FOTO DEL PLANTEAMIENTO DEL TRABAJO EN FOLIO</h2>
+        <p><img src="" alt="*FOTO A MANO*"></img></p>
+      </div>
+      <div class="section">
+        <h2>VIDEO DEL PROYECTO</h2>
+        <p><video src="" poster=""></video></p>
+      </div>
+      <div class="section">
+        <h2>Section 3</h2>
+      </div>
+    </div>
     <center>
       <footer>
         <p class="footer">Autor: Stefan Vlad Alecsa</p>
