--- a/Sobre_el_proyecto/Sobre_el_proyecto.html
+++ b/Sobre_el_proyecto/Sobre_el_proyecto.html
@@ -25,10 +25,7 @@
       </div>
       <div class="section">
         <h2>VIDEO DEL PROYECTO</h2>
-        <p><video src="" poster=""></video></p>
-      </div>
-      <div class="section">
-        <h2>Section 3</h2>
+        <p><video src="" poster="Portada.jpg" controls muted preload="metadata" <!– Se le indica al navegador que descargue los metadatos del video, pero no el video en sí –>></video></p>
       </div>
     </div>
     <center>
