--- a/Sobre_el_proyecto/Sobre_el_proyecto.html
+++ b/Sobre_el_proyecto/Sobre_el_proyecto.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre el proyecto</title>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rock+Salt&display=swap"rel="stylesheet"/>
-    <link rel="stylesheet" href="Sobre_el_proyecto.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Rock+Salt&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Sobre_el_proyecto.css">
   </head>
 
   <body>
     <header>
       <div class="logo">
-        <a href="../index.html"><img src="klipartz.com.png" alt="Logo" /></a>
+        <a href="../index.html"><img src="klipartz.com.png" alt="Logo"></a>
       </div>
       <div class="container">
         <h1>Stefan Alecsa</h1>
@@ -21,20 +21,18 @@
     <div class="container main">
       <div class="section">
         <h2>FOTO DEL PLANTEAMIENTO DEL TRABAJO EN FOLIO</h2>
-        <p><img src="" alt="*FOTO A MANO*"></img></p>
+        <p><img src="" alt="*FOTO A MANO*"></p>
       </div>
       <div class="section">
         <h2>VIDEO DEL PROYECTO</h2>
-        <p><video src="" poster="Portada.jpg" controls muted preload="metadata" <!– Se le indica al navegador que descargue los metadatos del video, pero no el video en sí –>></video></p>
+        <p><video src="" poster="Portada.jpg" controls muted preload="metadata"></video></p> <!-- Se le indica al navegador que descargue los metadatos del video, pero no el video en sí -->
       </div>
     </div>
-    <center>
       <footer>
         <p class="footer">Autor: Stefan Vlad Alecsa</p>
         <p class="footer">Correo: stefan.alecsa@educa.madrid.org</p>
         <p class="footer">Última modificación: 07 de noviembre del 2023</p>
       </footer>
-    </center>
     <nav class="Menú">
       <ul>
         <li class="lista"><a href="../index.html">Index</a></li>
