--- a/Sobre_el_proyecto/Sobre_el_proyecto.html
+++ b/Sobre_el_proyecto/Sobre_el_proyecto.html
@@ -21,7 +21,7 @@
     <div class="container main">
       <div class="section">
         <h2>FOTO DEL PLANTEAMIENTO DEL TRABAJO EN FOLIO</h2>
-        <p><img src="" alt="*FOTO A MANO*"></p>
+        <p><img src="FOTO A MANO.jpg" alt="*FOTO A MANO*"></p>
       </div>
       <div class="section">
         <h2>VIDEO DEL PROYECTO</h2>
