--- a/Sobre_el_proyecto/Sobre_el_proyecto.html
+++ b/Sobre_el_proyecto/Sobre_el_proyecto.html
@@ -21,18 +21,14 @@
     <div class="container main">
       <div class="section">
         <h2>FOTO DEL PLANTEAMIENTO DEL TRABAJO EN FOLIO</h2>
-        <p><img src="FOTO A MANO.jpg" alt="*FOTO A MANO*"></p>
+        <p><img src="Foto_A_Mano.jpg" alt="*FOTO A MANO*"></p>
       </div>
       <div class="section">
         <h2>VIDEO DEL PROYECTO</h2>
         <p><video src="" poster="Portada.jpg" controls muted preload="metadata"></video></p> <!-- Se le indica al navegador que descargue los metadatos del video, pero no el video en sí -->
+        <p>ENLACE AL VÍDEO:</p>
       </div>
     </div>
-      <footer>
-        <p class="footer">Autor: Stefan Vlad Alecsa</p>
-        <p class="footer">Correo: stefan.alecsa@educa.madrid.org</p>
-        <p class="footer">Última modificación: 07 de noviembre del 2023</p>
-      </footer>
     <nav class="Menú">
       <ul>
         <li class="lista"><a href="../index.html">Index</a></li>
@@ -40,5 +36,10 @@
         <li class="lista"><a href="../Formulario/Formulario.html">Formulario</a></li>
       </ul>
     </nav>
+      <footer>
+        <p class="footer">Autor: Stefan Vlad Alecsa</p>
+        <p class="footer">Correo: stefan.alecsa@educa.madrid.org</p>
+        <p class="footer">Última modificación: 07 de noviembre del 2023</p>
+      </footer>
   </body>
 </html>
